--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,86 +1,100 @@
+# 基础设置
 backend = "glx";
-glx-no-stencil = true;
-glx-copy-from-front = false;
-
-# Opacity
-active-opacity = 1;
-inactive-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = false;
-blur-background = true;
-blur-background-exclude = [
-];
- 
-blur-method = "dual_kawase";
-blur-strength = 4;
-
-# Fading
-fading = true;
-fade-delta = 6;
-no-fading-openclose = false;
-
-fade-exclude = [ ];
-
-# Other
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
+unredir-if-possible = true;
 vsync = true;
 dbe = false;
-unredir-if-possible = false;
-focus-exclude = [ ];
 detect-transient = true;
 detect-client-leader = true;
+invert-color-include = [ ];
+glx-copy-from-front = false;
 
-# Window type settings
-wintypes:
-{
-		dock = {
-				shadow = false;
-		};
-};
-
-opacity-rule = [
-    "80:class_g = 'Rofi'",
-    "80:class_g = 'Alacritty' && focused",
-    "70:class_g = 'Alacritty' && !focused"
-   
+# 圆角
+corner-radius = 10.0;
+round-borders = 2;
+rounded-corners-exclude = [
+    "class_g *= 'dwm'",
+    "class_g *= 'fcitx'",
 ];
 
+# 阴影
 shadow = false;
-shadow-radius = 12;
-shadow-offset-x = -5;
-shadow-offset-y = -5;
-shadow-opacity = 0.6;
-
+detect-rounded-corners = false;
+shadow-radius = 4;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
+shadow-opacity = 0.25;
+shadow-ignore-shaped = false;
 shadow-exclude = [
-    "! name~=''",
+	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+	"_GTK_FRAME_EXTENTS@:c",
+	"override_redirect = 1 && !WM_CLASS@:s",
     "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name = 'cpt_frame_window'",
-    "name *= 'VLC'",
-    "name *= 'zoom'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "class_g ?= 'Dmenu'",
+    "class_g *= 'dwm'",
+    "class_g *= 'Wine'",
+    "name = 'Dunst'",
+    "class_g *= 'float'"
 ];
 
-corner-radius = 0
+# 透明
+active-opacity = 0.83;
+opacity-rule = [
+    "80:class_g = 'dwmsystray'",
+    "100:class_g = 'mpv'",
+    "100:class_g = 'org.remmina.Remmina'",
+    "100:class_g = 'Surf'",
+    "100:class_g = 'qutebrowser'",
+    "100:name *? = 'Sunflower'",
+    "100:WM_NAME@:s *= 'bilibili'",
+    "100:class_g = 'obs'",
+    "100:class_g = 'Gimp'",
+    "100:WM_CLASS@:s *= 'tim.exe'",
+    "95:class_g = 'Wine'",
+    "100:class_g *= 'crx_'",
+    "100:WM_CLASS@:s *= 'vncviewer'",
+];
 
-xrender-sync-fence = true;
+# 淡入淡出
+fading = true;
+fade-delta = 2;
+fade-in-step = 0.01;
+fade-out-step = 0.01;
+fade-exclude = [
+    "class_g *= 'fcitx'",
+    "class_g = 'Rofi'"
+];
+
+# 动画
+animations = true;
+animation-window-mass = 1;
+animation-stiffness = 180;
+animation-dampening = 25;
+animation-for-open-window = "zoom";
+animation-exclude = [
+    "class_g = 'fcitx'",
+    "class_g = 'flameshot'",
+    "class_g = 'Dunst'",
+    "class_g = 'Rofi'"
+];
+
+# 模糊
+blur-method = "dual_kawase";
+blur-strength = 4;
+blur-kern = "3x3box";
+blur-background-exclude = [
+	"window_type = 'dock'",
+	"window_type = 'desktop'",
+	"_GTK_FRAME_EXTENTS@:c",
+    "class_g *= 'dwm'",
+    "name *? = 'Sunflower'",
+];
+
+# 针对窗口类型的设置
+wintypes :
+{
+  tooltip: { fade = true; shadow = false; opacity = 0.85; focus = true; };
+  fullscreen: { fade = true; shadow = false; focus = true; opacity = 0.93; };
+};
