added some shit

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -44,6 +44,10 @@ active-opacity = 0.83;
 opacity-rule = [
     "80:class_g = 'dwmsystray'",
     "100:class_g = 'mpv'",
+    "100:class_g = 'brave'",
+    "100:class_g = 'firefox'",
+    "100:class_g = 'Chromium'",
+    "100:class_g = 'google-chrome-stable'",
     "100:class_g = 'org.remmina.Remmina'",
     "100:class_g = 'Surf'",
     "100:class_g = 'qutebrowser'",
