--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -47,9 +47,10 @@ opacity-rule = [
     "100:class_g = 'brave'",
     "100:class_g = 'firefox'",
     "100:class_g = 'Chromium'",
-    "100:class_g = 'google-chrome-stable'",
+    "100:class_g = 'Google-Chrome-Stable'",
     "100:class_g = 'org.remmina.Remmina'",
     "100:class_g = 'Surf'",
+    "100:class_g = 'Xournalpp'",
     "100:class_g = 'qutebrowser'",
     "100:name *? = 'Sunflower'",
     "100:WM_NAME@:s *= 'bilibili'",
