--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -101,7 +101,7 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     family: FiraCode Nerd Font
-    #
+
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -112,6 +112,7 @@ font:
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
     family: FiraCode Nerd Font
+
     # The `style` can be specified to pick a specific face.
     style: Bold
 
@@ -191,74 +192,45 @@ colors:
   #
   # Colors which should be used to draw the terminal cursor. If these are unset,
   # the cursor color will be the inverse of the cell color.
-  #cursor:
-  #text: '0x44475a'
-  #cursor: '0xf8f8f2'
-    cursor:
-      text: CellBackground
-      cursor: CellForeground
-    vi_mode_cursor:
-      text: CellBackground
-      cursor: CellForeground
+  cursor:
+    text: '0x44475a'
+    cursor: '0xf8f8f2'
+
   # Normal colors
   normal:
-    #black:   '0x000000'
-    #red:     '0xff5555'
-    #green:   '0x50fa7b'
-    #yellow:  '0xf1fa8c'
-    #blue:    '0xbd93f9'
-    #magenta: '0xff79c6'
-    #cyan:    '0x8be9fd'
-    #white:   '0xbfbfbf'
+    black:   '0x000000'
+    red:     '0xff5555'
+    green:   '0x50fa7b'
+    yellow:  '0xf1fa8c'
+    blue:    '0xbd93f9'
+    magenta: '0xff79c6'
+    cyan:    '0x8be9fd'
+    white:   '0xbfbfbf'
 
-    black:   '#000000'
-    red:     '#ff5555'
-    green:   '#50fa7b'
-    yellow:  '#f1fa8c'
-    blue:    '#bd93f9'
-    magenta: '#ff79c6'
-    cyan:    '#8be9fd'
-    white:   '#bfbfbf'
   # Bright colors
   bright:
-    #black:   '0x4d4d4d'
-    #red:     '0xff6e67'
-    #green:   '0x5af78e'
-    #yellow:  '0xf4f99d'
-    #blue:    '0xcaa9fa'
-    #magenta: '0xff92d0'
-    #cyan:    '0x9aedfe'
-    #white:   '0xe6e6e6'
-    black:   '#4d4d4d'
-    red:     '#ff6e67'
-    green:   '#5af78e'
-    yellow:  '#f4f99d'
-    blue:    '#caa9fa'
-    magenta: '#ff92d0'
-    cyan:    '#9aedfe'
-    white:   '#e6e6e6'
+    black:   '0x4d4d4d'
+    red:     '0xff6e67'
+    green:   '0x5af78e'
+    yellow:  '0xf4f99d'
+    blue:    '0xcaa9fa'
+    magenta: '0xff92d0'
+    cyan:    '0x9aedfe'
+    white:   '0xe6e6e6'
 
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
   dim:
-    #black:   '0x14151b'
-    #red:     '0xff2222'
-    #green:   '0x1ef956'
-    #yellow:  '0xebf85b'
-    #blue:    '0x4d5b86'
-    #magenta: '0xff46b0'
-    #cyan:    '0x59dffc'
-    #white:   '0xe6e6d1'
-    black:   '#14151b'
-    red:     '#ff2222'
-    green:   '#1ef956'
-    yellow:  '#ebf85b'
-    blue:    '#4d5b86'
-    magenta: '#ff46b0'
-    cyan:    '#59dffc'
-    white:   '#e6e6d1'
+    black:   '0x14151b'
+    red:     '0xff2222'
+    green:   '0x1ef956'
+    yellow:  '0xebf85b'
+    blue:    '0x4d5b86'
+    magenta: '0xff46b0'
+    cyan:    '0x59dffc'
+    white:   '0xe6e6d1'
 
   # Indexed Colors
   #
@@ -524,8 +496,8 @@ colors:
 # at once.
 key_bindings:
   # (Windows/Linux only)
-  - { key: V,        mods: Control|Shift,        action: Paste            }
-  - { key: C,        mods: Control|Shift,        action: Copy             }
+  - { key: V,        mods: Control,        action: Paste            }
+  - { key: C,        mods: Control,        action: Copy             }
   #- { key: Insert,   mods: Shift,         action: PasteSelection   }
   #- { key: Key0,     mods: Control,       action: ResetFontSize    }
   #- { key: Equals,   mods: Control,       action: IncreaseFontSize }
