--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -47,6 +47,7 @@ opacity-rule = [
     "100:class_g = 'brave'",
     "100:class_g = 'firefox'",
     "100:class_g = 'Chromium'",
+    "100:class_g = 'emacs'",
     "100:class_g = 'Google-Chrome-Stable'",
     "100:class_g = 'org.remmina.Remmina'",
     "100:class_g = 'Surf'",
