--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -40,23 +40,23 @@ shadow-exclude = [
 ];
 
 # 透明
-active-opacity = 0.83;
+active-opacity = 0.93;
 opacity-rule = [
     "80:class_g = 'dwmsystray'",
     "100:class_g = 'mpv'",
-    "100:class_g = 'brave'",
-    "100:class_g = 'firefox'",
-    "100:class_g = 'Chromium'",
-    "100:class_g = 'emacs'",
-    "100:class_g = 'Google-Chrome-Stable'",
     "100:class_g = 'org.remmina.Remmina'",
+    "100:class_g = 'Chromium'",
+    "100:class_g = 'firefox'",
+    "100:class_g = 'Brave-browser'",
+    "100:class_g = 'Google-chrome'",
     "100:class_g = 'Surf'",
-    "100:class_g = 'Xournalpp'",
     "100:class_g = 'qutebrowser'",
     "100:name *? = 'Sunflower'",
     "100:WM_NAME@:s *= 'bilibili'",
     "100:class_g = 'obs'",
+    "100:class_g = 'brave'",
     "100:class_g = 'Gimp'",
+    "100:class_g = 'com.alibabainc.dingtalk'",
     "100:WM_CLASS@:s *= 'tim.exe'",
     "95:class_g = 'Wine'",
     "100:class_g *= 'crx_'",
@@ -83,12 +83,12 @@ animation-exclude = [
     "class_g = 'fcitx'",
     "class_g = 'flameshot'",
     "class_g = 'Dunst'",
-    "class_g = 'Rofi'"
+    "class_g = 'dmenu'"
 ];
 
 # 模糊
 blur-method = "dual_kawase";
-blur-strength = 4;
+blur-strength = 3;
 blur-kern = "3x3box";
 blur-background-exclude = [
 	"window_type = 'dock'",
