--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -50,6 +50,7 @@ opacity-rule = [
     "100:class_g = 'Brave-browser'",
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'Surf'",
+    "100:class_g = 'Steam'",
     "100:class_g = 'qutebrowser'",
     "100:name *? = 'Sunflower'",
     "100:WM_NAME@:s *= 'bilibili'",
@@ -83,7 +84,8 @@ animation-exclude = [
     "class_g = 'fcitx'",
     "class_g = 'flameshot'",
     "class_g = 'Dunst'",
-    "class_g = 'dmenu'"
+    "class_g = 'dmenu'",
+    "class_g = 'Steam'"
 ];
 
 # 模糊
