--- a/wayfire/.config/wayfire.ini
+++ b/wayfire/.config/wayfire.ini
@@ -167,7 +167,7 @@ portal = /usr/libexec/xdg-desktop-portal
 # Start a terminal
 # https://github.com/alacritty/alacritty
 binding_terminal = <super> KEY_ENTER
-command_terminal = alacritty
+command_terminal = st
 
 # Start your launcher
 # https://hg.sr.ht/~scoopta/wofi
