--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -42,26 +42,13 @@ shadow-exclude = [
 # 透明
 active-opacity = 0.93;
 opacity-rule = [
-    "80:class_g = 'dwmsystray'",
-    "100:class_g = 'mpv'",
-    "100:class_g = 'org.remmina.Remmina'",
-    "100:class_g = 'Chromium'",
-    "100:class_g = 'firefox'",
-    "100:class_g = 'Brave-browser'",
-    "100:class_g = 'Google-chrome'",
-    "100:class_g = 'Surf'",
-    "100:class_g = 'Steam'",
-    "100:class_g = 'qutebrowser'",
-    "100:name *? = 'Sunflower'",
-    "100:WM_NAME@:s *= 'bilibili'",
-    "100:class_g = 'obs'",
-    "100:class_g = 'brave'",
-    "100:class_g = 'Gimp'",
-    "100:class_g = 'com.alibabainc.dingtalk'",
-    "100:WM_CLASS@:s *= 'tim.exe'",
-    "95:class_g = 'Wine'",
-    "100:class_g *= 'crx_'",
+    "100:_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
+    "100:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'",
     "100:WM_CLASS@:s *= 'vncviewer'",
+    "100:class_g = 'mpv'",
+    "100:class_g = 'obs'",
+    "100:class_g = 'Gimp'",
+    "85:!focused",
 ];
 
 # 淡入淡出
@@ -71,21 +58,23 @@ fade-in-step = 0.01;
 fade-out-step = 0.01;
 fade-exclude = [
     "class_g *= 'fcitx'",
-    "class_g = 'Rofi'"
+    "class_g = 'Rofi'",
+    "WM_CLASS@:s *= 'screenkey'",
 ];
 
 # 动画
 animations = true;
-animation-window-mass = 1;
-animation-stiffness = 180;
-animation-dampening = 25;
+animation-window-mass = 0.5;
+animation-dampening = 16;
+animation-stiffness-in-tag = 125;
 animation-for-open-window = "zoom";
+animation-for-unmap-window = "squeeze";
 animation-exclude = [
     "class_g = 'fcitx'",
     "class_g = 'flameshot'",
     "class_g = 'Dunst'",
-    "class_g = 'dmenu'",
-    "class_g = 'Steam'"
+    "class_g = 'Rofi'",
+    "WM_CLASS@:s *= 'screenkey'",
 ];
 
 # 模糊
@@ -93,11 +82,12 @@ blur-method = "dual_kawase";
 blur-strength = 3;
 blur-kern = "3x3box";
 blur-background-exclude = [
+    # "class_g *= 'dwm'",
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c",
-    "class_g *= 'dwm'",
     "name *? = 'Sunflower'",
+    "class_g *= 'wemeetapp'",
 ];
 
 # 针对窗口类型的设置
