--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -48,6 +48,7 @@ opacity-rule = [
     "100:class_g = 'mpv'",
     "100:class_g = 'obs'",
     "100:class_g = 'Gimp'",
+    "100:class_g = 'Brave-browser'",
     "85:!focused",
 ];
 
