--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -49,6 +49,7 @@ opacity-rule = [
     "100:class_g = 'obs'",
     "100:class_g = 'Gimp'",
     "100:class_g = 'Brave-browser'",
+    "100:class_g = 'com.alibabainc.dingtalk'",
     "100:class_g = 'Emacs'",
     "85:!focused",
 ];
