--- a/zsh/.config/zsh/.zimrc
+++ b/zsh/.config/zsh/.zimrc
@@ -17,4 +17,4 @@ zmodule hlissner/zsh-autopair
 zmodule pabloariasal/zfm
 zmodule agkozak/zsh-z
 zmodule Aloxaf/fzf-tab
-zmodule jeffreytse/zsh-vi-mode
+# zmodule jeffreytse/zsh-vi-mode
