new tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,3 +20,12 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind -r D neww -c "#{pane_current_path}" "[[ -e .todo.md ]] && nvim .todo.md || nvim ~/.todo.md"
+
+# forget the find window.  That is for chumps
+bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
+
+bind-key -r i run-shell "tmux neww tmux-cht.sh"
+
+bind-key -r P run-shell "~/scripts/tmux-sessionizer ~/programming/algorithm/"
