new config tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,3 +29,7 @@ bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
 
 bind-key -r P run-shell "~/scripts/tmux-sessionizer ~/programming/algorithm/"
+
+
+set-hook -g pane-focus-in "run -b 'bash ~/.config/tmux/fzf_panes.tmux update_mru_pane_ids'"
+bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
