--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,12 @@
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
-
+set -sg exit-empty on 
+set -g mouse on
+set -g visual-activity off
+setw -g monitor-activity off
+setw -g monitor-bell off
+set -g history-limit 10000
 unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
@@ -15,11 +20,11 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+# bind -r ^ last-window
+# bind -r k select-pane -U
+# bind -r j select-pane -D
+# bind -r h select-pane -L
+# bind -r l select-pane -R
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e .todo.md ]] && nvim .todo.md || nvim ~/.todo.md"
 
@@ -28,8 +33,76 @@ bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
 
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
 
-bind-key -r P run-shell "~/scripts/tmux-sessionizer ~/programming/algorithm/"
-
 
 set-hook -g pane-focus-in "run -b 'bash ~/.config/tmux/fzf_panes.tmux update_mru_pane_ids'"
 bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
+
+
+# key Bindings 
+
+# create session 
+bind C-c new-session
+
+# window navigation
+unbind 1
+unbind 2
+unbind 3
+unbind 4
+unbind 5
+unbind 6
+unbind 7
+unbind 8
+unbind 9
+unbind 0
+
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+
+
+bind -n M-! join-pane -t :1
+bind -n M-@ join-pane -t :2
+bind -n 'M-#' join-pane -t :3
+bind -n 'M-$' join-pane -t :4
+bind -n M-% join-pane -t :5
+bind -n M-^ join-pane -t :6
+bind -n M-& join-pane -t :7
+bind -n M-* join-pane -t :8
+bind -n M-( join-pane -t :9
+
+bind -n M-f resize-pane -Z
+
+bind -n M-p split-window -v -c "#{pane_current_path}"
+bind -n M-v split-window -h -c "#{pane_current_path}"
+unbind p
+unbind n
+bind p previous-window
+bind n next-window
+
+
+
+# pane navigation0
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+bind > swap-pane -D
+bind < swap-pane -U
+bind | swap-pane
+bind -n M-Space next-layout
+# pane resizing
+bind -n M-H resize-pane -L 3
+bind -n M-J resize-pane -D 3
+bind -n M-K resize-pane -U 3
+bind -n M-L resize-pane -R 3
+
+bind -n M-n new-window -c "#{pane_current_path}"
+bind -n M-N break-pane
+bind -n M-q kill-pane
+
