avoid key confict

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -76,10 +76,10 @@ bind -n M-& join-pane -t :7
 bind -n M-* join-pane -t :8
 bind -n M-( join-pane -t :9
 
-bind -n M-f resize-pane -Z
+bind  M-f resize-pane -Z
 
-bind -n M-p split-window -v -c "#{pane_current_path}"
-bind -n M-v split-window -h -c "#{pane_current_path}"
+bind  M-p split-window -v -c "#{pane_current_path}"
+bind  M-v split-window -h -c "#{pane_current_path}"
 unbind p
 unbind n
 bind p previous-window
@@ -88,21 +88,21 @@ bind n next-window
 
 
 # pane navigation0
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind  M-h select-pane -L
+bind  M-j select-pane -D
+bind  M-k select-pane -U
+bind  M-l select-pane -R
 bind > swap-pane -D
 bind < swap-pane -U
 bind | swap-pane
 bind -n M-Space next-layout
 # pane resizing
-bind -n M-H resize-pane -L 3
-bind -n M-J resize-pane -D 3
-bind -n M-K resize-pane -U 3
-bind -n M-L resize-pane -R 3
+bind  M-H resize-pane -L 3
+bind  M-J resize-pane -D 3
+bind  M-K resize-pane -U 3
+bind  M-L resize-pane -R 3
 
-bind -n M-n new-window -c "#{pane_current_path}"
-bind -n M-N break-pane
-bind -n M-q kill-pane
+bind  M-n new-window -c "#{pane_current_path}"
+bind  M-N break-pane
+bind  M-q kill-pane
 
