--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,11 +20,17 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # vim-like pane switching
-# bind -r ^ last-window
-# bind -r k select-pane -U
-# bind -r j select-pane -D
-# bind -r h select-pane -L
-# bind -r l select-pane -R
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# pane resizing
+bind -r H resize-pane -L 3
+bind -r J resize-pane -D 3
+bind -r K resize-pane -U 3
+bind -r L resize-pane -R 3
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e .todo.md ]] && nvim .todo.md || nvim ~/.todo.md"
 
@@ -76,33 +82,26 @@ bind -n M-& join-pane -t :7
 bind -n M-* join-pane -t :8
 bind -n M-( join-pane -t :9
 
-bind  M-f resize-pane -Z
+bind -n M-f resize-pane -Z
 
-bind  M-p split-window -v -c "#{pane_current_path}"
-bind  M-v split-window -h -c "#{pane_current_path}"
+bind -n M-p split-window -v -c "#{pane_current_path}"
+bind -n M-v split-window -h -c "#{pane_current_path}"
 unbind p
 unbind n
 bind p previous-window
 bind n next-window
 
 
-
 # pane navigation0
-bind  M-h select-pane -L
-bind  M-j select-pane -D
-bind  M-k select-pane -U
-bind  M-l select-pane -R
+# bind  M-h select-pane -L
+# bind  M-j select-pane -D
+# bind  M-k select-pane -U
+# bind  M-l select-pane -R
 bind > swap-pane -D
 bind < swap-pane -U
 bind | swap-pane
 bind -n M-Space next-layout
-# pane resizing
-bind  M-H resize-pane -L 3
-bind  M-J resize-pane -D 3
-bind  M-K resize-pane -U 3
-bind  M-L resize-pane -R 3
-
-bind  M-n new-window -c "#{pane_current_path}"
-bind  M-N break-pane
-bind  M-q kill-pane
+bind -n M-n new-window -c "#{pane_current_path}"
+bind -n M-N break-pane
+bind -n M-q kill-pane
 
