--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,7 @@ set -g history-limit 10000
 unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+# set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
@@ -104,4 +104,6 @@ bind -n M-Space next-layout
 bind -n M-n new-window -c "#{pane_current_path}"
 bind -n M-N break-pane
 bind -n M-q kill-pane
+
+source ~/.config/tmux/statusline.conf
 
