move tmux-sessionizer to .config/tmux dic

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,9 +35,9 @@ bind -r L resize-pane -R 3
 bind -r D neww -c "#{pane_current_path}" "[[ -e .todo.md ]] && nvim .todo.md || nvim ~/.todo.md"
 
 # forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.config/tmux/tmux-sessionizer"
 
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
+bind-key -r i run-shell "tmux neww ~/.config/tmux/tmux-cht.sh"
 
 
 set-hook -g pane-focus-in "run -b 'bash ~/.config/tmux/fzf_panes.tmux update_mru_pane_ids'"
